<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preview_PDF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:background="@color/green_accent"/>

    <TextView
        android:id="@+id/tvPdfPreviewStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/status_generating_and_loading_pdf_preview"
        android:textColor="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <RadioGroup
        android:id="@+id/rgPdfStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/grey_text_icon"
        android:layout_marginTop="8dp"
        android:padding="8dp">

        <RadioButton
            android:id="@+id/rbOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original"
            android:checked="true"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/rbBlackWhite1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_and_white"
            android:textColor="@color/white"/>
        <RadioButton
            android:id="@+id/rbBlackWhite2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pro"
            android:textColor="@color/white"/>
    </RadioGroup>

    <ImageView
        android:id="@+id/ivPdfPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:background="#3D3D3D"
        android:padding="4dp"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeletePdf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_and_cancel"
            android:background="@drawable/vuongbogoc"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSavePdf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_PDF"
            android:background="@drawable/login_background"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>