<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sign_here"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@color/green_accent"/>

    <com.example.camerascanner.activitysignature.signatureview.signature.SignatureView
        android:id="@+id/signatureView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12" />

    <!-- Thanh điều chỉnh độ dày chữ ký -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        android:background="@drawable/vien_den_nen_trang">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Độ dày:"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"/>

        <SeekBar
            android:id="@+id/seekBarStrokeWidth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:max="20"
            android:progress="6" />

        <TextView
            android:id="@+id/tvStrokeWidth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6px"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:minWidth="40dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/vien_den">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteSign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/search_background"
            android:text="@string/delete_sign"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYesSign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_background"
            android:text="@string/confirm"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>